<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/item_width"
    android:layout_height="@dimen/item_height"
    android:layout_margin="@dimen/small_margin"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/item_image"
        android:src="@drawable/product_example"
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:layout_height="@dimen/img_item_height"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item_price"
            android:text="@string/price_example_text"
            android:textSize="@dimen/simple_text_size"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textStyle="bold"
            android:layout_marginStart="4dp"
            android:textSize="@dimen/small_text_size"
            android:text="@string/ruble_value_text"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:maxLines="2"
        android:ellipsize="end"
        android:id="@+id/item_title"
        android:text="@string/item_title"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>